[metadata]
name = pdblib
url = https://www.amuletmc.com
author = James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A Python parser for the Windows PDB format.
platforms = any


[options]
packages = find:
zip_safe = False
python_requires = ~=3.6
install_requires =
    undname ~= 0.2

[options.packages.find]
include = pdblib*
